[gd_scene load_steps=4 format=3 uid="uid://cph0kyg4r5xx"]

[ext_resource type="Script" path="res://characters/trader/trader.gd" id="1_wdb2b"]
[ext_resource type="Texture2D" uid="uid://ddgojwam8j24e" path="res://characters/trader/trader.png" id="2_4qi56"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b0bk4"]

[node name="Trader" type="Node2D"]
script = ExtResource("1_wdb2b")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_4qi56")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_b0bk4")

[node name="InteractLabel" type="Label" parent="."]
offset_left = 5.0
offset_top = -7.0
offset_right = 10.0
offset_bottom = 2.0
theme_override_colors/font_color = Color(0.784314, 0.784314, 0.784314, 1)
text = "E"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
